--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 <div id="header" class="jumbotron text-center">
   <h1>Fanny Hasbi</h1>
-  <p><i>Software Engineering Enthusiast</i></p>
+  <p><i>Security Enthusiast</i></p>
   <a href="https://www.facebook.com/fannyhasbi" target="_blank" class="link" title="Fanny Hasbi Facebook" rel="dofollow"><i class="fa fa-facebook-square fa-2x"></i></a>
   <a href="https://instagram.com/fannyhasbi" target="_blank" class="link" title="Fanny Hasbi Instagram" rel="dofollow"><i class="fa fa-instagram fa-2x"></i></a>
   <a href="https://github.com/fannyhasbi" target="_blank" class="link" title="Fanny Hasbi Github" rel="dofollow"><i class="fa fa-github fa-2x"></i></a>
@@ -57,16 +57,17 @@
       <h2 class="heading text-center">ABOUT ME</h2>
       <h3>Hello, my name is Fanny Hasbi. I really love coding :)</h3>
       <p>
-        I come from Brebes, Indonesia. I am a student of Computer Engineering at Diponegoro University since 2016. I focus on server-side development, and I have experienced in PHP and Javascript with its frameworks. I learned programming since 2014 with Javascript.
+        I come from Brebes, Indonesia. I am a student of Computer Engineering at Diponegoro University since 2016. I focus on server-side development, and I have experienced in Golang, Javascript, and PHP with its frameworks. I learned programming since 2014 with Javascript.
       </p>
       <p>
         I have completed several projects from small to large scale. Now, I'm still working on several projects while I am studying new technology. I am really enthusiastic participating in technology events and competitions.
       </p>
+      <p>For complete info, please visit my <a href="https://linkedin.com/in/fannyhasbi">Linkedin profile</a></p>
     </div>
   </div>
 </div>
 
-<div id="portfolio" class="container-fluid bg-odd">
+<!-- <div id="portfolio" class="container-fluid bg-odd">
   <h2 class="heading text-center">PORTFOLIO</h2>
   <div class="row text-center">
     <div class="col-xs-12 col-sm-4">
@@ -199,6 +200,7 @@
     </div>
   </div>
 </div>
+-->
 
 
 <footer class="container-fluid">
