--- a/emocrypt/index.html
+++ b/emocrypt/index.html
@@ -4,28 +4,47 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Emocrypt - Emoji Encryption by Fanny Hasbi</title>
+  
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+
+  <!-- Bootstrap -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+
+  <!-- SweetAlert2 -->
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
+
+  <link rel="stylesheet" href="style.css">
+
   <script src="./emocrypt.min.js"></script>
+  <script src="./main.js"></script>
 </head>
-<body>
-  <input type="text" id="message"><br>
+<body class="text-center">
+  <!-- <input type="text" id="message"><br>
   <input type="text" id="key"><br><br>
 
   <button onclick="encrypt()">GAS</button><br><br>
 
-  <h1 id="result"></h1>
+  <h1 id="result"></h1> -->
 
-  <script>
-    function encrypt(){
-      let message = document.getElementById('message').value;
-      let key = document.getElementById('key').value;
+  <div class="container">
+    <div class="row">
+      <div class="col-6 offset-3">
+        <form class="form-signin">
+          <img class="mb-4" src="https://getbootstrap.com/docs/4.4/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">
+          <h1 class="h3 mb-3 font-weight-normal">Emoji Encryption</h1>
+          <label for="message" class="sr-only">Message</label>
+          <input type="text" id="message" class="form-control" placeholder="Message" required>
+          <label for="key" class="sr-only">Secret key</label>
+          <input type="text" id="key" class="form-control mb-3" placeholder="Secret key" required>
+          
+          <button class="btn btn-lg btn-success btn-block" type="button" onclick="encrypt()">Encrypt</button>
 
-      let emo = new EmoCrypt.EmoCrypt();
-      cipher = emo.encrypt(message, key);
-      
-      console.log('hasilnya :', cipher);
-
-      document.getElementById('result').innerHTML = cipher;
-    }
-  </script>
+          <p class="mt-5 mb-3 text-muted">&copy; Fanny Hasbi - <a href="https://github.com/fannyhasbi/emocrypt">See the source</a>.</p>
+        </form>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
