--- a/emocrypt/index.html
+++ b/emocrypt/index.html
@@ -26,7 +26,7 @@
 <body class="text-center">
   <div class="container">
     <div class="row">
-      <div class="col-md-6 md-offset-3">
+      <div class="col-md-6 offset-md-3">
         <form class="form-signin">
           <img class="mb-4" src="https://cdn.shopify.com/s/files/1/1061/1924/products/Zipper-Mouth_Face_Emoji_large.png?v=1571606065" alt="" width="72" height="72">
           <h1 class="h3 mb-3 font-weight-normal">Emoji Encryption</h1>
