--- a/watch-estimation/index.html
+++ b/watch-estimation/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="./favicon.ico">
-    <title>Estimasi Nonton</title>
+    <title>Estimasi Perencanaan Nonton</title>
 
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
@@ -22,49 +22,54 @@
         <div class="col-md-10 offset-md-1">
           <form id="form" class="form-signin">
             <div class="form-group row">
-              <label for="episode" class="col-sm-4 col-form-label">Jumlah Episode</label>
+              <label for="episode" class="col-sm-4 col-form-label">Jumlah episode</label>
               <div class="col-sm-8">
                 <input type="number" class="form-control" id="episode" required>
               </div>
             </div>
             <div class="form-group row">
-              <label for="episode" class="col-sm-4 col-form-label">Durasi per episode<small class="form-text text-muted">* dalam menit</small></label>
+              <label for="episode" class="col-sm-4 col-form-label">Durasi per episode</label>
               <div class="col-sm-8">
-                <input type="number" class="form-control" id="duration" required>
+                <div class="input-group">
+                  <input type="text" class="form-control" id="duration" required>
+                  <div class="input-group-append">
+                    <span class="input-group-text">menit</span>
+                  </div>
+                </div>
               </div>
             </div>
 
-            <p class="lead text-center">Waktu yang Diluangkan</p>
+            <p class="lead text-center mt-4">Waktu yang Diluangkan</p>
 
             <div class="form-row">
-              <div class="form-group col-md-3">
+              <div class="form-group col-sm-6 col-md-3">
                 <label for="mon">Senin</label>
                 <input type="number" class="form-control" id="mon" min="0" value="0">
               </div>
-              <div class="form-group col-md-3">
+              <div class="form-group col-sm-6 col-md-3">
                 <label for="tue">Selasa</label>
                 <input type="number" class="form-control" id="tue" min="0" value="0">
               </div>
-              <div class="form-group col-md-3">
+              <div class="form-group col-sm-6 col-md-3">
                 <label for="wed">Rabu</label>
                 <input type="number" class="form-control" id="wed" min="0" value="0">
               </div>
-              <div class="form-group col-md-3">
+              <div class="form-group col-sm-6 col-md-3">
                 <label for="thu">Kamis</label>
                 <input type="number" class="form-control" id="thu" min="0" value="0">
               </div>
             </div>
 
             <div class="form-row">
-              <div class="form-group col-md-3">
+              <div class="form-group col-md-3 col-sm-6">
                 <label for="fri">Jumat</label>
                 <input type="number" class="form-control" id="fri" min="0" value="0">
               </div>
-              <div class="form-group col-md-3">
+              <div class="form-group col-md-3 col-sm-6">
                 <label for="sat">Sabtu</label>
                 <input type="number" class="form-control" id="sat" min="0" value="0">
               </div>
-              <div class="form-group col-md-3">
+              <div class="form-group col-md-3 col-sm-6">
                 <label for="sun">Minggu</label>
                 <input type="number" class="form-control" id="sun" min="0" value="0">
               </div>
