--- a/watch-estimation/index.html
+++ b/watch-estimation/index.html
@@ -31,7 +31,7 @@
               <label for="episode" class="col-sm-4 col-form-label">Durasi per episode</label>
               <div class="col-sm-8">
                 <div class="input-group">
-                  <input type="text" class="form-control" id="duration" required>
+                  <input type="number" class="form-control" id="duration" required>
                   <div class="input-group-append">
                     <span class="input-group-text">menit</span>
                   </div>
