--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
   <link rel="stylesheet" href="assets/css/custom.css">
+
+  <script>
+    window.location.replace("https://fannyhasbi.com");
+  </script>
 </head>
 <body>
 
